<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/book"
            android:title="@string/nav_guide" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map"
            android:title="@string/nav_map" />

        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/scanner"
            android:title="@string/nav_scanner" />

        <item
            android:id="@+id/talkas"
            android:icon="@drawable/nature"
            android:title="@string/talkas" />
    </group>

    <item android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>